Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.1
-
-
01f6ba9949 (qt/qtdeclarative/dev) 01f6ba9949 (qt/tqtc-qtdeclarative/dev) 67c5a38fec (qt/qtdeclarative/6.3) 67c5a38fec (qt/tqtc-qtdeclarative/6.3)
Description
Elements of MediaDevices such as audioOutputs are not available for ListView or ComboBox.
The minimal example is below. It displays audio outputs. The last working version I can confirm was 6.2.2.
import QtQuick import QtMultimedia Window { id: root width: 640 height: 480 visible: true MediaDevices { id: mediaDevices } ListView { height: root.height model: mediaDevices.audioOutputs delegate: Text { text: modelData.description } } }
Attachments
For Gerrit Dashboard: QTBUG-102857 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
407761,2 | QQmlListAccessor: Support registered sequence types | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
407957,3 | QQmlListAccessor: Support registered sequence types | 6.3 | qt/qtdeclarative | Status: MERGED | +2 | 0 |