QQmlListAccessor: Support registered sequence types

Since we can pass any registered sequence types through QML as-is now,
they are not wrapped into JS arrays anymore. We have to accept them as
models because we also accept JS arrays.

Fixes: QTBUG-102857
Change-Id: Ib294fff3681dce7f754efe877b19d17e698b4911
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 01f6ba9949a2f4ef2ac38d14f9d6f3ccff5852c9)